Revision history for {{$dist->name}}

{{$NEXT}}
  - added Authen::Simple
  - added Crypt::PasswdMD5
  - added use File::Touch

0.27      2012-11-02 13:59:14 America/New_York
  - sort modules in doco case insensitive
  - added XML::Rabbit
  - added Role::Tiny
  - added Scalar::Does

0.26      2012-10-26 15:37:36 EST5EDT
  - added App::RegexFileUtils
  - added Shell::Config::Generate
  - added Shell::Guess
  - added WebService::TwitterBootstrap::Download::Custom
  - added Test::Differences
  - added DBD::PgPP
  - added DBD::mysqlPP

0.25      2012-10-25 16:50:59 America/New_York
  - rm Rose::Planter because of dep on DBD::Pg
  - rm Test::Strict on cygwin for real
    (not just doco of it)

0.24      2012-10-25 16:28:33 America/New_York
  - rm Test::Strict on cygwin

0.23      2012-10-25 16:25:30 America/New_York
  - rm Data::Downloader on cygwin
  - fixup AnyEvent::Open3::Simple

0.22      2012-10-25 16:18:36 America/New_York
  - don't install modules under Cygwin and MSWin32 that I know don't work there.
  - added Devel::StackTrace
  - added Clustericious::Client
  - added Clustericious::Config
  - added Clustericious::Log
  - added Rose::Planter
  - added String::Template

0.21      2012-10-24 13:41:44 America/New_York
  - added AnyEvent::Open3::Simple
  - added Lingua::Alphabet::Phonetic::LAPD
  - added Mojolicious::Plugin::Ident

0.2       2012-08-29 08:09:14 EST5EDT
  - remove Test::Strict (doesn't seem to like windows)

0.1       2012-08-11 13:14:39 America/New_York
  - initial version